add walkthrough video in navbar for not signed in users

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -53,6 +53,7 @@
         <ul class="nav">
           <li class="nav-item nav-link"><%= link_to t(".log_in"), new_user_session_path, class: "btn btn-outline-dark btn-light" %></li>
           <li class="nav-item nav-link"><%= link_to t(".sign_up"), new_user_registration_path, class: "btn btn-primary" %></li>
+          <li class="nav-item nav-link"><%= link_to t(".walkthrough_video"), url="https://www.youtube.com/watch?v=P50Yu_BbbCo", class: "btn btn-success text-light" %></li>
           <li class="nav-item nav-link">
             <div class="dropdown mb-1">
               <a
