reorder navbar buttons to improve clarity

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,13 +51,10 @@
         </ul>
       <% else %>
         <ul class="nav">
-          <li class="nav-item nav-link"><%= link_to t(".log_in"), new_user_session_path, class: "btn btn-outline-dark btn-light" %></li>
-          <li class="nav-item nav-link"><%= link_to t(".sign_up"), new_user_registration_path, class: "btn btn-primary" %></li>
-          <li class="nav-item nav-link"><%= link_to t(".walkthrough_video"), url="https://www.youtube.com/watch?v=P50Yu_BbbCo", class: "btn btn-success text-light" %></li>
           <li class="nav-item nav-link">
             <div class="dropdown mb-1">
               <a
-                class="dropdown-toggle form-control text-decoration-none btn btn-outline-dark btn-light"
+                class="dropdown-toggle form-control text-decoration-none btn btn-outline-primary"
                 href="#"
                 role="button"
                 id="localeDropdown"
@@ -74,6 +71,9 @@
               </ul>
             </div>
           </li>
+          <li class="nav-item nav-link"><%= link_to t(".log_in"), new_user_session_path, class: "btn btn-outline-primary" %></li>
+          <li class="nav-item nav-link"><%= link_to t(".walkthrough_video"), url="https://www.youtube.com/watch?v=P50Yu_BbbCo", class: "btn btn-success text-light" %></li>
+          <li class="nav-item nav-link"><%= link_to t(".sign_up"), new_user_registration_path, class: "btn btn-primary" %></li>
         </ul>
       <% end %>
     </div>
