--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,7 +76,7 @@
       <h3 class="fw-normal mb-3"><%= t('.tagline') %></h3>
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
         <%= link_to t('.sign_up'), new_user_registration_path(locale: I18n.locale), class: "btn btn-primary" %>
-        <%= link_to t('.log_in'), new_user_session_path(locale: I18n.locale), class: "btn btn-outline-dark btn-light" %>
+        <%= link_to t('.log_in'), new_user_session_path(locale: I18n.locale), class: "btn btn-light btn-outline-success" %>
       </div>
     </div>
   </div>
